fix vertical align

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -19,6 +19,8 @@ td {
   border-color: #ddd;
 }
 input {
+  vertical-align: top;
+  padding: 0px;
   width: 100%;
   height: 100%;
   background-color: transparent;
@@ -27,6 +29,7 @@ input {
 }
 
 textarea {
+  vertical-align: top;
   background-color: transparent;
   border: none;
   outline: none;
